--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/turingschool-examples/pizza-express#readme",
   "dependencies": {
-    "express": "^4.13.3",
+    "express": "^4.17.1",
     "express-handlebars": "^2.0.1",
     "hbs": "^4.0.0",
+    "jade": "^1.11.0",
     "pryjs": "^0.1.3",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "mocha": "^2.3.3",
